A_star is now imported from another file

--- a/example_a_star.ipynb
+++ b/example_a_star.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,14 @@
     "from collections import defaultdict\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from algorithms import A_star"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +222,7 @@
        "[206974 rows x 9 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,54 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class A_star():\n",
-    "\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        data_transform: Callable[[Any], Any],\n",
-    "        get_neighbours: Callable[[int, Any], Dict[int, float]],\n",
-    "        heurestic: Callable[[int, int, Any], float],\n",
-    "        data: Any\n",
-    "    ):\n",
-    "        self.data = data_transform(data)\n",
-    "        self.get_neighbours = get_neighbours\n",
-    "        self.heurestic = heurestic\n",
-    "\n",
-    "    def __call__(self, startNode: int, endNode: int) -> List[Tuple[int, float]]:\n",
-    "        came_from = {}\n",
-    "        g_score, f_score = defaultdict(lambda: float(\"inf\")), defaultdict(lambda: float(\"inf\"))\n",
-    "        g_score[startNode], f_score[startNode] = 0.0, self.heurestic(startNode, startNode, self.data)\n",
-    "        open_set = [(f_score[startNode], startNode)]\n",
-    "        open_set_nodes = set((startNode,))\n",
-    "        while bool(open_set):\n",
-    "            current = open_set[0][1]\n",
-    "            if current == endNode:\n",
-    "                path = [current]\n",
-    "                while current != startNode:\n",
-    "                    current = came_from[current]\n",
-    "                    path.insert(0, current)\n",
-    "                return path\n",
-    "            open_set = open_set[1:]\n",
-    "            open_set_nodes.remove(current)\n",
-    "            for neighbour, dist in self.get_neighbours(current, self.data).items():\n",
-    "                tentative_g_score = g_score[current] + dist\n",
-    "                if tentative_g_score < g_score[neighbour]:\n",
-    "                    came_from[neighbour] = current\n",
-    "                    g_score[neighbour] = tentative_g_score\n",
-    "                    neighbour_f_score = tentative_g_score + self.heurestic(startNode, neighbour, self.data)\n",
-    "                    f_score[neighbour] = neighbour_f_score\n",
-    "                    if neighbour not in open_set_nodes:\n",
-    "                        bisect.insort(open_set, (neighbour_f_score, neighbour))\n",
-    "                        open_set_nodes.add(neighbour)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding path from 44917 to 26381\n"
+      "Finding path from 22934 to 46798\n"
      ]
     }
    ],
@@ -346,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[44917, 0, 701, 26381]"
+       "[22934, 17378, 0, 46798]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
