construction of graphs is fixed

--- a/example_a_star.ipynb
+++ b/example_a_star.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[206974 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding path from 22934 to 46798\n"
+      "Finding path from 33277 to 35528\n"
      ]
     }
    ],
@@ -301,22 +301,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[22934, 17378, 0, 46798]"
+       "{'path': [33277, 0, 35528], 'delay': 14.0}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pathfinder(x1, x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>&lt;AS_nr&gt;</th>\n",
+       "      <th>&lt;pref&gt;</th>\n",
+       "      <th>&lt;1st_s&gt;</th>\n",
+       "      <th>&lt;s_nr&gt;</th>\n",
+       "      <th>&lt;ld_nr&gt;</th>\n",
+       "      <th>&lt;del&gt;</th>\n",
+       "      <th>&lt;jit&gt;</th>\n",
+       "      <th>&lt;los&gt;</th>\n",
+       "      <th>&lt;hop&gt;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11663</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35528</td>\n",
+       "      <td>48</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0.0004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31995</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35528</td>\n",
+       "      <td>9</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       <AS_nr>  <pref>  <1st_s>  <s_nr>  <ld_nr>  <del>  <jit>   <los>  <hop>\n",
+       "11663        0       0        0       0    35528     48     22  0.0004      1\n",
+       "31995        0       0        0       0    35528      9     44  0.0005      1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df[\"<AS_nr>\"] == 0) & (df[\"<ld_nr>\"] == 35528)]"
    ]
   },
   {
