fixed data generation

--- a/example_a_star.ipynb
+++ b/example_a_star.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[206974 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,18 +244,21 @@
     "\n",
     "def data_transform(df: pd.DataFrame) -> Dict[int, Dict[int, float]]:\n",
     "    data_transformed = {}\n",
-    "    df = df.drop_duplicates()\n",
+    "    df.drop((df[df[\"<ld_nr>\"] == 0]).index, inplace=True)\n",
+    "    df.replace({\"<AS_nr>\": {0: np.nan}}, inplace=True)\n",
+    "    df[\"<AS_nr>\"] = df[\"<AS_nr>\"].ffill(axis=0).astype(int)\n",
+    "    df.drop_duplicates(inplace=True)\n",
     "    for row in df.itertuples():\n",
-    "        val1 = row[1]\n",
-    "        val2 = row[5]\n",
+    "        start = row[1]\n",
+    "        end = row[5]\n",
     "        dist = float(row[6])\n",
-    "        for key, target in ((val1, val2), (val2, val1)):\n",
-    "            if (neighbours := data_transformed.get(key, None)) is not None:\n",
-    "                if target in neighbours:\n",
-    "                    dist = min(neighbours[target], dist)\n",
-    "                neighbours[target] = dist\n",
-    "            else:\n",
-    "                data_transformed[key] = {target: dist}\n",
+    "        if (neighbours := data_transformed.get(start, None)) is not None:\n",
+    "            if end in neighbours:\n",
+    "                msg = f\"Connection {start} -> {end} already exists\"\n",
+    "                raise ValueError(msg)\n",
+    "            neighbours[end] = dist\n",
+    "        else:\n",
+    "            data_transformed[start] = {end: dist}\n",
     "    return data_transformed\n",
     "\n",
     "def get_neighbours(node: int, data: Dict[int, Dict[int, float]]) -> Dict[int, float]:\n",
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,45 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding path from 33277 to 35528\n"
-     ]
-    }
-   ],
-   "source": [
-    "x1, x2 = random.choice(all_nodes), random.choice(all_nodes)\n",
-    "print(f\"Finding path from {x1} to {x2}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'path': [33277, 0, 35528], 'delay': 14.0}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pathfinder(x1, x2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -358,54 +323,218 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11663</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>256</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>3356</td>\n",
+       "      <td>39</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>3705</td>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>65536</td>\n",
+       "      <td>86</td>\n",
+       "      <td>85</td>\n",
+       "      <td>34</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>35528</td>\n",
-       "      <td>48</td>\n",
-       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29076</td>\n",
+       "      <td>49</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42226</td>\n",
+       "      <td>33</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206969</th>\n",
+       "      <td>393239</td>\n",
+       "      <td>512</td>\n",
+       "      <td>4191652</td>\n",
+       "      <td>85</td>\n",
+       "      <td>209</td>\n",
+       "      <td>26</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.0008</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206970</th>\n",
+       "      <td>438802</td>\n",
+       "      <td>5120</td>\n",
+       "      <td>4191737</td>\n",
+       "      <td>85</td>\n",
+       "      <td>43802</td>\n",
+       "      <td>10</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206971</th>\n",
+       "      <td>12845938</td>\n",
+       "      <td>256</td>\n",
+       "      <td>4191822</td>\n",
+       "      <td>85</td>\n",
+       "      <td>12741</td>\n",
+       "      <td>24</td>\n",
+       "      <td>46</td>\n",
        "      <td>0.0004</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31995</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35528</td>\n",
-       "      <td>9</td>\n",
-       "      <td>44</td>\n",
-       "      <td>0.0005</td>\n",
+       "      <th>206972</th>\n",
+       "      <td>12845948</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>4191907</td>\n",
+       "      <td>85</td>\n",
+       "      <td>20959</td>\n",
+       "      <td>45</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206973</th>\n",
+       "      <td>42949672</td>\n",
+       "      <td>256</td>\n",
+       "      <td>4191992</td>\n",
+       "      <td>85</td>\n",
+       "      <td>196906</td>\n",
+       "      <td>26</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.0009</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>206970 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       <AS_nr>  <pref>  <1st_s>  <s_nr>  <ld_nr>  <del>  <jit>   <los>  <hop>\n",
-       "11663        0       0        0       0    35528     48     22  0.0004      1\n",
-       "31995        0       0        0       0    35528      9     44  0.0005      1"
+       "         <AS_nr>  <pref>  <1st_s>  <s_nr>  <ld_nr>  <del>  <jit>   <los>  \\\n",
+       "0              1     256        1      85     3356     39     47  0.0003   \n",
+       "1              1       0        0       0     3705     23     10  0.0003   \n",
+       "2              2   65536       86      85       34     21      7  0.0009   \n",
+       "3              2       0        0       0    29076     49     37  0.0002   \n",
+       "4              2       0        0       0    42226     33     46  0.0002   \n",
+       "...          ...     ...      ...     ...      ...    ...    ...     ...   \n",
+       "206969    393239     512  4191652      85      209     26     34  0.0008   \n",
+       "206970    438802    5120  4191737      85    43802     10     49  0.0002   \n",
+       "206971  12845938     256  4191822      85    12741     24     46  0.0004   \n",
+       "206972  12845948    2048  4191907      85    20959     45     34  0.0001   \n",
+       "206973  42949672     256  4191992      85   196906     26     38  0.0009   \n",
+       "\n",
+       "        <hop>  \n",
+       "0           1  \n",
+       "1           1  \n",
+       "2           1  \n",
+       "3           1  \n",
+       "4           1  \n",
+       "...       ...  \n",
+       "206969      1  \n",
+       "206970      1  \n",
+       "206971      1  \n",
+       "206972      1  \n",
+       "206973      1  \n",
+       "\n",
+       "[206970 rows x 9 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[(df[\"<AS_nr>\"] == 0) & (df[\"<ld_nr>\"] == 35528)]"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding path from 39688 to 46069\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1, x2 = random.choice(all_nodes), random.choice(all_nodes)\n",
+    "print(f\"Finding path from {x1} to {x2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'path': [39688, 2854, 28917, 13122, 703, 2764, 46069], 'delay': 130.0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pathfinder(x1, x2)"
+   ]
   }
  ],
  "metadata": {
