slight change in graph structure

--- a/example_a_star.ipynb
+++ b/example_a_star.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +259,8 @@
     "            neighbours[end] = dist\n",
     "        else:\n",
     "            data_transformed[start] = {end: dist}\n",
+    "        if end not in data_transformed:\n",
+    "            data_transformed[end] = {}\n",
     "    return data_transformed\n",
     "\n",
     "def get_neighbours(node: int, data: Dict[int, Dict[int, float]]) -> Dict[int, float]:\n",
